# blockchain-checkers

./: .gitignore  Anchor.toml  Cargo.toml  game_approach.txt  solana-dev-wallet.json  sonic-dev-wallet.json  todo.txt
app/: index.html  package.json
app/src/: App.tsx  hmm.tsx  index.css  main.tsx
app/src/components/: Nav.tsx
app/src/components/Board/: Board.tsx
app/src/components/Cell/: Cell.tsx  Figure.tsx
app/src/components/Engine/: Cell.ts  GameEngine.tsx
app/src/components/Player/: Player.tsx
app/src/context/: socketContext.tsx
app/src/pages/: ClaimReward.tsx  CreateGame.tsx  DisplayPlayers.tsx  JoinGame.tsx
app/src/utils/: contants.ts  env.ts  socket.ts  wallet.tsx
app/src/utils/provider/: IDL.ts  setup.ts
programs/blockchain-checkers/: Cargo.toml
programs/blockchain-checkers/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/blockchain-checkers/src/instructions/: claim_rewards.rs  claim_stake_reward.rs  fund_game.rs  fund_tournament.rs  join_game.rs  join_tournament.rs  make_game.rs  make_tournament.rs  mod.rs  place_bet.rs  place_stake.rs  start_game.rs  start_tournament.rs  submit_game_result.rs
programs/blockchain-checkers/src/states/: game.rs  mod.rs  tournament.rs
rust-server/: Cargo.toml
rust-server/src/: main.rs
server/: .gitignore  package-lock.json  package.json
server/src/: server.ts
server/src/game/: cell.ts  coordinate.ts  player.ts
server/src/types/: index.ts
tests/: blockchain-checkers.ts
