[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
socketioxide = "0.16.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.4", features = ["v4"] }
